--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -23,7 +23,7 @@ $color-no-answer: $color-primary;
 $color-no-question: $color-primary;
 
 // $color-primary: $color-tangerine-orange;
-
+$animation-duration: 0.5s;
 
 $header-height: 60px;
 
